--- a/index.html
+++ b/index.html
@@ -71,11 +71,16 @@
         </div>
       </header>
       <div id="dw-s2" class="bmd-layout-drawer bg-faded">
-        <header><a class="navbar-brand">Title</a></header>
+        <header><a class="navbar-brand">How to PWA</a></header>
         <ul class="list-group">
-          <a class="list-group-item">Link 1</a>
-          <a class="list-group-item">Link 2</a>
-          <a class="list-group-item">Link 3</a>
+          <a class="list-group-item">1. Introduction</a>
+          <a class="list-group-item">2. Web App Manifest</a>
+          <a class="list-group-item">3. Service Workers</a>
+          <a class="list-group-item">4. Caching</a>
+          <a class="list-group-item">5. IndexedDB</a>
+          <a class="list-group-item">6. Background Sync</a>
+          <a class="list-group-item">7. Push Notifications</a>
+          <a class="list-group-item">8. Native Device Features</a>
         </ul>
       </div>
       <main class="bmd-layout-content">
@@ -102,6 +107,12 @@
                 notifications, has an icon on the home screen, and loads as a
                 top-level, full screen experience.
               </p>
+
+              <figure class="figure">
+                <a href="https://caniuse.com/#feat=web-app-manifest" target="_blank">
+                    <img src="img/web-app-manifest.png" class="figure-img img-fluid rounded" alt="web app manifest browser support">
+                <figcaption class="figure-caption"><a href="https://caniuse.com/#feat=web-app-manifest" target="_blank">Web App Manifest Browser Support</a></figcaption>
+              </figure>
 
               <button
                 type="button"
